<resources>
    <string name="app_name">yachat</string>

    <string name="login">Login</string>
    <string name="pwd">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="exit">exit</string>

    <string name="err_incorrect_login">Имя пользователя не найдено</string>
    <string name="err_incorrect_password">Пароль неверный</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>
